src/objects/Enrolled_Wait_List__c.object
<CustomObject>
    <fields>
        <fullName>Applicant_Confirmation_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applicant Confirmation Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applications__c</fullName>
        <label>Applications</label>
        <referenceTo>Applications__c</referenceTo>
        <relationshipLabel>Wait Lists</relationshipLabel>
        <relationshipName>Enrolled_Wait_Lists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Bed_size__c</fullName>
        <label>Bed size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Status_Date_Time_With_Seconds__c</fullName>
        <description>Text field to show Current status date time with seconds on WL detail Page</description>
        <label>Current Status Date Time</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Status_Date_Time__c</fullName>
        <inlineHelpText>This time changes when the current status changes</inlineHelpText>
        <label>Current Status Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <label>Current Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Onlist</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Selected</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>Leased</fullName>
                </value>
                <value>
                    <fullName>Issue/Offer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HMY__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HMY</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Wait Lists</relationshipLabel>
        <relationshipName>Wait_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IncomeTtarget_Points__c</fullName>
        <label>Income Target Points</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <label>Issue Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leased_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Leased Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Limit__c</fullName>
        <label>Limit</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lottery__c</fullName>
        <label>Lottery</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_refusals__c</fullName>
        <label>Number of refusals</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OnList_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OnList Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Date_Time_with_seconds__c</fullName>
        <description>Text field to show seconds on WL detail Page</description>
        <label>Original Date Time</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PASS_THROUGH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PASS THROUGH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_Status__c</fullName>
        <label>Portal Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>On Program</fullName>
                </value>
                <value>
                    <fullName>Selected</fullName>
                </value>
                <value>
                    <fullName>Issued Voucher / Offered Unit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prefernce_Point__c</fullName>
        <label>Preference Point</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prefernce_Points_Order__c</fullName>
        <label>Preference Points Order</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Code__c</fullName>
        <label>Property Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Property_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>100000 - MTW S8 - HAP</fullName>
                </value>
                <value>
                    <fullName>101000 - SBS CRF Core</fullName>
                </value>
                <value>
                    <fullName>101100 - SBS Parker Kier</fullName>
                </value>
                <value>
                    <fullName>102000 - SBS Homeless 1</fullName>
                </value>
                <value>
                    <fullName>103000 - SBS Homeless 2</fullName>
                </value>
                <value>
                    <fullName>104000 - SBS Homeless 3</fullName>
                </value>
                <value>
                    <fullName>104100 - SBS Alpha Square</fullName>
                </value>
                <value>
                    <fullName>104200 - SBS: Hotel Churchill</fullName>
                </value>
                <value>
                    <fullName>104300 - SBS - 1000 Vets: VVSD</fullName>
                </value>
                <value>
                    <fullName>104400 - SBS - 1000 Vets: SVdP</fullName>
                </value>
                <value>
                    <fullName>104500 - SBS - MHS HOMES Central</fullName>
                </value>
                <value>
                    <fullName>104600 - SBS - CRF Impact</fullName>
                </value>
                <value>
                    <fullName>104700 - SBS - MHS C STAR</fullName>
                </value>
                <value>
                    <fullName>105010 - PBV - Alabama Manor</fullName>
                </value>
                <value>
                    <fullName>105020 - PBV - Beckys House</fullName>
                </value>
                <value>
                    <fullName>105030 - PBV - Connections</fullName>
                </value>
                <value>
                    <fullName>105040 - PBV - Hollywood Palms</fullName>
                </value>
                <value>
                    <fullName>105050 - PBV - Leah Residence</fullName>
                </value>
                <value>
                    <fullName>105060 - PBV - Potiker</fullName>
                </value>
                <value>
                    <fullName>105070 - PBV - Stepping Stone</fullName>
                </value>
                <value>
                    <fullName>105080 - PBV - Take Wing</fullName>
                </value>
                <value>
                    <fullName>105090 - PBV - Townspeople</fullName>
                </value>
                <value>
                    <fullName>105100 - PBV - Hotel Sandford</fullName>
                </value>
                <value>
                    <fullName>105110 - PBV - Mason</fullName>
                </value>
                <value>
                    <fullName>105120 - PBV - Meade</fullName>
                </value>
                <value>
                    <fullName>105130 - PBV - Santa Margarita</fullName>
                </value>
                <value>
                    <fullName>105140 - PBV - The Courtyard</fullName>
                </value>
                <value>
                    <fullName>105150 - TBRA Home</fullName>
                </value>
                <value>
                    <fullName>105160 - Parker-Kier</fullName>
                </value>
                <value>
                    <fullName>105170 - Westminister Manor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RAD_Applied_Date_and_Time__c</fullName>
        <description>This field is updated when WL is created and reapplied</description>
        <inlineHelpText>This field is updated when WL is created and reapplied</inlineHelpText>
        <label>Applied Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RAD_Date_and_Time_with_Seconds__c</fullName>
        <inlineHelpText>This time is updated when the waitlist is created or reapplied</inlineHelpText>
        <label>Original Date/Time (Depreciated)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAD_Preference_Group__c</fullName>
        <label>Preference Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group 1</fullName>
                </value>
                <value>
                    <fullName>Group 2</fullName>
                </value>
                <value>
                    <fullName>Group 3</fullName>
                </value>
                <value>
                    <fullName>Group 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RAD_Selection_Marker__c</fullName>
        <label>Selection Marker</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Current_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Over Income</fullName>
                </value>
                <value>
                    <fullName>Criminal</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Refused Offer</fullName>
                </value>
                <value>
                    <fullName>Income Targeting</fullName>
                </value>
                <value>
                    <fullName>System Selection</fullName>
                </value>
                <value>
                    <fullName>NED</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Briefing</fullName>
                </value>
                <value>
                    <fullName>Claim</fullName>
                </value>
                <value>
                    <fullName>Dropped</fullName>
                </value>
                <value>
                    <fullName>Dropped/No Update 2011</fullName>
                </value>
                <value>
                    <fullName>Ineligible</fullName>
                </value>
                <value>
                    <fullName>Lease Up</fullName>
                </value>
                <value>
                    <fullName>No Show/Response</fullName>
                </value>
                <value>
                    <fullName>Offer Accepted</fullName>
                </value>
                <value>
                    <fullName>Offer Rejected</fullName>
                </value>
                <value>
                    <fullName>Voucher Cancelled</fullName>
                </value>
                <value>
                    <fullName>Voucher Expired</fullName>
                </value>
                <value>
                    <fullName>Voucher Issued</fullName>
                </value>
                <value>
                    <fullName>Yearly Updated</fullName>
                </value>
                <value>
                    <fullName>Special Admission</fullName>
                </value>
                <value>
                    <fullName>See Memo</fullName>
                </value>
                <value>
                    <fullName>Accessibility Needs</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Deconcentrate Poverty</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Eligibility</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>No, Response</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Request</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Targeted Selection</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Vou Expired</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Removed_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Removed Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_Original_Datetime__c</fullName>
        <description>This field is auto populated from a trigger based on the conversion of the RAD_Date_and_Time_with_Seconds__c string field that is converted to a date/time field</description>
        <label>Original Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Second_Bed_Size__c</fullName>
        <label>Second Bed Size</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_To_Boomi__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is checked by Boomi to determine if a record is to be picked up and processed.</description>
        <inlineHelpText>If the box is checked, Boomi will pull the record on the next poll.  If the box is unchecked, Boomi will not pull the record.</inlineHelpText>
        <label>Send To Boomi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On List</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>Selected</fullName>
                </value>
                <value>
                    <fullName>Leased</fullName>
                </value>
                <value>
                    <fullName>Issued/Offer</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Refused</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WLAPPLIC_HMY__c</fullName>
        <label>WLAPPLIC_HMY</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wait_List_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wait List Type</label>
        <referenceTo>Wait_List_Type__c</referenceTo>
        <relationshipLabel>Wait Lists</relationshipLabel>
        <relationshipName>Wait_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weblinks__c</fullName>
        <label>Weblinks</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>YARDI_HMY__c</fullName>
        <label>YARDI HMY</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YARDI_Wait_List_Type__c</fullName>
        <label>YARDI Wait List Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>reason_out_of_order__c</fullName>
        <label>Reason out of order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Income Targeting</fullName>
                </value>
                <value>
                    <fullName>Deconcentrate Poverty</fullName>
                </value>
                <value>
                    <fullName>System Selection</fullName>
                </value>
                <value>
                    <fullName>NED</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Briefing</fullName>
                </value>
                <value>
                    <fullName>Claim</fullName>
                </value>
                <value>
                    <fullName>Dropped</fullName>
                </value>
                <value>
                    <fullName>Dropped/No Update 2011</fullName>
                </value>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
                <value>
                    <fullName>Ineligible</fullName>
                </value>
                <value>
                    <fullName>Lease Up</fullName>
                </value>
                <value>
                    <fullName>No Show/Response</fullName>
                </value>
                <value>
                    <fullName>Offer Accepted</fullName>
                </value>
                <value>
                    <fullName>Offer Rejected</fullName>
                </value>
                <value>
                    <fullName>Voucher Cancelled</fullName>
                </value>
                <value>
                    <fullName>Voucher Expired</fullName>
                </value>
                <value>
                    <fullName>Voucher Issued</fullName>
                </value>
                <value>
                    <fullName>Yearly Updated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Wait List</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Applications__c</columns>
        <columns>NAME</columns>
        <columns>Wait_List_Type__c</columns>
        <columns>SFDC_Original_Datetime__c</columns>
        <columns>Current_Status__c</columns>
        <columns>Current_Status_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WL-{0000000000}</displayFormat>
        <label>Wait List ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wait Lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Reason_NotBlank</fullName>
        <active>true</active>
        <description>Ensure the Reason field is not blank on WL</description>
        <errorConditionFormula>ISBLANK(TEXT( Reason__c ))</errorConditionFormula>
        <errorDisplayField>Reason__c</errorDisplayField>
        <errorMessage>Ensure the Reason field is not blank</errorMessage>
    </validationRules>
</CustomObject>